cluster/jellyfin/sonarr.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - sonarr.luma.chrismiller.xyz
      secretName: sonarr-luma-tls
  rules:
    - host: sonarr.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
