cluster/jellyfin/webdav.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-webdav
  namespace: jellyfin
  labels:
    app: jellyfin-webdav
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-webdav
  template:
    metadata:
      labels:
        app: jellyfin-webdav
    spec:
      containers:
        - name: jellyfin-webdav
          image: docker.io/apachewebdav/apachewebdav:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /var/lib/dav/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: jellyfin-media
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-webdav
  namespace: jellyfin
spec:
  selector:
    app: jellyfin-webdav
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-webdav
  namespace: jellyfin
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 0
spec:
  tls:
    - hosts:
        - dav.nas.luma.chrismiller.xyz
      secretName: dav-nas-luma-tls
  rules:
    - host: dav.nas.luma.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-webdav
                port:
                  number: 80
